# Autonomous-systems-Portfolio

Portfolio 1/: Blackjack.docx
Portfolio 1/blackjack_project/: main.ipynb
Portfolio 1/blackjack_project/agents/: __init__.py  baseline_agent.py  hard_total_agent.py  probabilistic_agent.py  soft_total_agent.py
Portfolio 1/blackjack_project/results/: performance_results.csv
Portfolio 2/: test.py
Portfolio 2/config/: config.json  custom_track_improved.Map.Gbx  reward.pkl
Portfolio 2/src/: sweep.py  sweep_1.py  sweep_2.py  sweep_3.py  sweep_phase_2.py
Portfolio 2/src/baseline/: random_policy.py
Portfolio 2/src/dqn/: agent.py  network.py  replay_buffer.py  sweep_phase_2.py  train.py
Portfolio 2/src/utils/: change-names.py  environment.py
Portfolio 2/wandb/run-20260513_213033-kvlnx5zx/: run-kvlnx5zx.wandb
Portfolio 2/wandb/run-20260513_213119-3j8jhzlx/: run-3j8jhzlx.wandb
Portfolio 2/wandb/run-20260513_225056-9wcqis2n/: run-9wcqis2n.wandb
Portfolio 2/wandb/run-20260513_225152-twdy58jn/: run-twdy58jn.wandb
Portfolio 2/wandb/run-20260513_235423-0pyk25qr/: run-0pyk25qr.wandb
Portfolio 2/wandb/run-20260513_235515-a9i2kr4e/: run-a9i2kr4e.wandb
Portfolio 2/wandb/run-20260513_235937-ns9yucvc/: run-ns9yucvc.wandb
Portfolio 2/wandb/run-20260514_000023-fm7judbz/: run-fm7judbz.wandb
Portfolio 2/wandb/run-20260514_000124-qe3m8edu/: run-qe3m8edu.wandb
Portfolio 2/wandb/run-20260514_000307-crvgubo8/: run-crvgubo8.wandb
Portfolio 2/wandb/run-20260514_000456-jmfhl3vw/: run-jmfhl3vw.wandb
Portfolio 2/wandb/run-20260514_000538-jei7d6ev/: run-jei7d6ev.wandb
Portfolio 2/wandb/run-20260514_000612-6dtbgmj8/: run-6dtbgmj8.wandb
Portfolio 2/wandb/run-20260514_001602-k3b02xa5/: run-k3b02xa5.wandb
Portfolio 2/wandb/run-20260514_002528-bpgcf39p/: run-bpgcf39p.wandb
Portfolio 2/wandb/run-20260514_004110-r32aki7l/: run-r32aki7l.wandb
Portfolio 2/wandb/run-20260514_004137-un6okq00/: run-un6okq00.wandb
Portfolio 2/wandb/run-20260514_004202-xr2shnss/: run-xr2shnss.wandb
Portfolio 2/wandb/run-20260514_004248-f3zy2w4k/: run-f3zy2w4k.wandb
Portfolio 2/wandb/run-20260514_004344-bk3srnye/: run-bk3srnye.wandb
Workshop/: relevantelinks.md
Workshop/blackjack_project/: README.md  blackjack.py  q_learning.py  random_policy_runs_mapping_2.csv  sarsa.py  value_iteration.py
Workshop/llm-guided-curriculum-rl-main/: .gitignore  README.md  blackjack_gui.py  environment.yml  eval_pkl_files.py  no-curriculum.sh  pyproject.toml  requirements.txt  setup.py  test.py
Workshop/llm-guided-curriculum-rl-main/.github/workflows/: update-environment.yml
Workshop/llm-guided-curriculum-rl-main/curriculum_seed_analysis/: agent_progression_data.csv  best_performance_data.csv  stage_performance_data.csv  summary_statistics.json  table1_stage_completion.tex  table2_stage_accuracies.tex  table3_best_performance.tex  table4_final_performance.tex
Workshop/llm-guided-curriculum-rl-main/experiments/: analyze_8deck_runs.py  analyze_no_curriculum_runs.py  analyze_time_bust_comparison.py  run_curriculum_evaluation.sh  run_multi_seed_evaluation.py  run_no_curriculum_evaluation.sh
Workshop/llm-guided-curriculum-rl-main/multi_seed_results_20250816_121202/: intermediate_results.json
Workshop/llm-guided-curriculum-rl-main/no_curriculum_analysis/: analysis_results.json  no_curriculum_analysis_report.md
Workshop/llm-guided-curriculum-rl-main/paper/: CITATION.bib  README.md
Workshop/llm-guided-curriculum-rl-main/scripts/: BlackJackENV.py  LLM.py  LLMGuidedCurriculum.py  MultiAgentCurriculumSystem.py  MultiAgentStandardSystem.py  RLAgent.py  analyze_logs.py  curriculum_multi_agent_rl.py
Workshop/llm-guided-curriculum-rl-main/scripts/env-helpers/: update_env.sh  update_environment.py
blackjack_project/: README.md  main.ipynb  main.py  requirements.txt
blackjack_project/agents/: baseline_agent.py  dealer_aware_agent.py  dealer_copy_agent.py  hard_total_agent.py  pro_bja_agent.py  probabilistic_agent.py  safe_play_agent.py  soft_total_agent.py
blackjack_project/environment/: blackjack_env.py
install/: requirements.txt
results/: performance_results.csv
src/: p1.ipynb
(+856 files in other folders)
